Add hasNoParameters assertion for URIs and URLs. Refactor hasParameter/hasNoParameter error messages.